--- a/templates/entry.jinja
+++ b/templates/entry.jinja
@@ -1,7 +1,12 @@
-@{{ bibliography[key].type.upper() }} { {{-key-}},
+@{{ bibliography[key].type.upper() }}{ {{-key-}},
+    {% if bibliography[key].persons|length > 0 %}
+    {% for field in bibliography[key].persons %}
+    {{ field.lower() }} = { {{-bibliography[key].persons[field]|join(" and ")-}} },
+    {% endfor %}
+    {% endif %}
     {% for field in bibliography[key].fields %}
     {% if field == "title" and bibliography[key].fields["title"][0] == '{' %}
-    title = {{ bibliography[key].fields[field] }},
+    title = "{{ bibliography[key].fields[field] }}",
     {% else %}
     {{ field.lower() }} = { {{-bibliography[key].fields[field]-}} },
     {% endif %}
